chore: clean unused files and push current state
- Remove build artifacts, logs, IDE configs, archives
- Remove planning docs (frontend/docs/, review/plan files)
- Remove old architecture flow docs (docs/)
- Add monitoring & performance diagnostics components
- Update controllers with unified response pattern
- Update frontend stores, router, and chat WebSocket